# scx_cake

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  start_headless.sh  stop_headless.sh
.agent/rules/: documentation.md
docs/: Optimizations.md  bpf_verifier_guide.md  cache_line_analysis.md  compatibility.md  cycles.md  diagram.md  experiments.md  memory_audit.md  optimization_results.md  opus_optimization.md  phase1_results.md  scheduler_architecture_guide.md
docs/design/: design.md
docs/logs/: 6_hours_idle_arc_raiders.txt
scripts/: benchmark.sh
scripts/logs/: desktop_scx_cake_20260106_133213.jsonl  desktop_scx_cake_20260106_133526.jsonl  desktop_scx_cake_20260106_140357.jsonl  gaming_EEVDF_20260105_223059.jsonl  gaming_scx_cake_20260105_222931.jsonl  gaming_scx_cake_20260105_224032.jsonl  gaming_scx_cake_20260105_224238.jsonl  gaming_scx_cake_20260105_224718.jsonl  gaming_scx_cake_20260105_230904.jsonl  gaming_scx_cake_20260105_232807.jsonl  gaming_scx_cake_20260105_233359.jsonl  gaming_scx_cake_20260106_161732.jsonl  stress_EEVDF_20260106_003043.jsonl  stress_scx_cake_20260105_234044.jsonl  stress_scx_cake_20260106_002331.jsonl  stress_scx_cake_20260106_002625.jsonl  stress_scx_cake_20260106_002924.jsonl
src/: main.rs  stats.rs  topology.rs  tui.rs
src/bpf/: cake.bpf.c  intf.h  stochastic.bpf.c
